Started to rearrage site content to optimize flow of services, with formatting changes for larger titles on livestream.

--- a/pages/about.html
+++ b/pages/about.html
@@ -115,7 +115,7 @@
 									<span class="date">Est. 2024</span>
 									<h1>About<br />
 									Our Brand</h1>
-									<p>We are committed to helping you stay informed and empowered, guiding you through the dynamic landscape of our evolving digital economy. Join us on this exciting voyage and take control of your financial future.</p>
+									<p>Our platform offers educational content and interactive events to get you started with ease. We continually seek partnerships to provide additional tools, helping you extend your opportunities at a steady pace.</p>
 								</header>
 								<div class="video main">
 									<video id="myVideo" width="100%" controls poster="../assets/images/bglogo02-lowres.png">
@@ -143,10 +143,14 @@
 								<header>
 									<h2>Learn, Earn & Spend</h2>
 									<!-- Section Description -->
-									<p>Discover the world of cryptocurrency through our <a href="../index.html#pagination-controls-top">OFiDCrypt Articles</a> and tools, designed to broaden your understanding and ease your journey. Dive into insightful content and useful resources that make the complex world of digital currency accessible to everyone. Embrace the knowledge that equips you to navigate and utilize cryptocurrencies with confidence.</p>
-									<h2>Who is Tokin ⬢</h2>
-									<p>Tokin ⬢ is the official alias of the OFiDCrypt creator, <b><a href="https://x.com/OFiDCrypt">Verified by ID</a></b> on <b>𝕏</b></p>
-								</header>
+									<p>Learn essential crypto fundamentals with our carefully curated <a href="../index.html#pagination-controls-top">OFiDCrypt Articles</a>, designed to broaden your
+										understanding in a simple, clear, and concise way. Explore our site and community resources to learn more about Kin and discover how you can send,
+										earn, or spend crypto on a growing list of services integrated with Code Wallet. Learn more about Code Wallet and how it works with Kin in the
+										<a href="/vipwithcode.html">VIP Lounge</a></p>
+									<h2>Get Involved</h2>
+									<p>Join like-minded individuals within the community on Telegram, X, and Flipchat, and participate in <a href="/livestream.html">Contests & Live
+										Events</a> to share and learn together.</p>
+									</header>
 							</section>
 					</div>
 
