--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -220,10 +220,10 @@
 							<div id="index-posts">
 								<section class="posts">
 									<article>
-										<header>
+										<header class="large-href">
 											<span class="date">PDA-001 Perk Digital Art</span>
-											<h2><a href="#table-next-event">Perk<br />
-													Digital Art</a></h2>
+											<h1><a href="#table-next-event">Perk<br />
+													Digital Art</a></h1>
 										</header>
 										<a href="#" class="image fit"><img src="../assets/images/picgif01.gif"
 												alt="Featured Art Thumbnail" /></a>
