--- a/index.html
+++ b/index.html
@@ -164,12 +164,10 @@
 							<header class="major">
 								<span class="date">OFiDCrypt Services</span>
 								<h1>Our <br />Mission</h1>
-								<p>Our mission is to simplify your entry into the crypto world with a single, user-friendly wallet and payment app
+								<p>To simplify your entry into the crypto world with a single, user-friendly wallet and payment app
 									dedicated to one cryptocurrency and its community. From there, explore additional opportunities through our growing
 									partnerships.</p>
-								<p>For those that want to jump straight in, we've provided some quick links below. Otherwise, we recommend doing an
-									overview of our <a href="/index.html#Guide">Full Guide & Walk-through</a> below to best learn about how we can
-									introduce you gradually to the vast world of crypto. </p>
+								<p>To jump straight in, we’ve provided quick links below. Otherwise, we recommend reviewing our <a href=“/index.html#Guide”>Full Guide & Walk-through</a> to learn about Kin, Code Wallet, and how they complement each other and fit into the future of our digital economy.</p>
 							</header>
 					
 							<!-- Quick Start & Guide -->
@@ -186,7 +184,7 @@
 										<td>Get your Wallet<br />
 											<b>Via Partner App</b>
 										</td>
-										<td>Get<br />
+										<td>Download<br />
 											<a href="https://getcode.com/#download-1">Code Wallet</a>
 										</td>
 									</tr>
@@ -202,7 +200,7 @@
 										<td>Enter Contests<br />
 											<b>Via Perk.Exchange</b>
 										</td>
-										<td>Learn More &<br />
+										<td>Learn<br />
 											<a href="/pages/livestream.html#about-contests">How to Enter</a>
 										</td>
 									</tr>
