--- a/pages/about.html
+++ b/pages/about.html
@@ -148,7 +148,7 @@
 										earn, or spend crypto on a growing list of services integrated with Code Wallet. Learn more about Code Wallet and how it works with Kin in the
 										<a href="/vipwithcode.html">VIP Lounge</a></p>
 									<h2>Get Involved</h2>
-									<p>Join like-minded individuals within the community on Telegram, X, and Flipchat, and participate in <a href="/livestream.html">Contests & Live
+									<p>Join like-minded individuals within the community on Telegram and X, and participate in <a href="/livestream.html">Contests & Live
 										Events</a> to share and learn together.</p>
 									</header>
 							</section>
