--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 								<p>To simplify your entry into the crypto world with a single, user-friendly wallet and payment app
 									dedicated to one cryptocurrency and its community. From there, explore additional opportunities through our growing
 									partnerships.</p>
-								<p>To jump straight in, we’ve provided quick links below. Otherwise, we recommend reviewing our <a href=“/#Guide”>Full Guide & Walk-through</a> to learn about Kin, Code Wallet, and how they complement each other and fit into the future of our digital economy.</p>
+								<p>To jump straight in, we’ve provided quick links below. Otherwise, we recommend reviewing our <a href=“/index.html#Guide”>Full Guide & Walk-through</a> to learn about Kin, Code Wallet, and how they complement each other and fit into the future of our digital economy.</p>
 							</header>
 					
 							<!-- Quick Start & Guide -->
