--- a/pages/about.html
+++ b/pages/about.html
@@ -148,8 +148,8 @@
 										earn, or spend crypto on a growing list of services integrated with Code Wallet. Learn more about Code Wallet and how it works with Kin in the
 										<a href="/vipwithcode.html">VIP Lounge</a></p>
 									<h2>Get Involved</h2>
-									<p>Join like-minded individuals within the community on Telegram and X, and participate in <a href="/livestream.html">Contests & Live
-										Events</a> to share and learn together.</p>
+									<p>Join like-minded individuals within the <a href="/community.html">Community</a> on Flipchat, Telegram and X. Learn about Kin and participate in promotions & live
+										events with Kin and Code Wallet together, creating shared experiences and growing together.</p>
 									</header>
 							</section>
 					</div>
