--- a/community.html
+++ b/community.html
@@ -174,7 +174,7 @@
 
 				<!-- More About Our Partners -->
 				<h2 style="text-align: center;">More Ways to Engage</h2>
-				<p style="text-align: center;">OFiDCrypt actively works on developing and streaming <a href="/pages/livestream.html">Promotions & Contests</a> for
+				<p style="text-align: center;">OFiDCrypt actively works on developing and streaming <a href="/pages/livestream.html">Promotions & Live Events</a> for
 					community participation, in collaboration with other contributors.</p>
 			</section>
 			</section>
