--- a/pages/about.html
+++ b/pages/about.html
@@ -149,7 +149,7 @@
 										<a href="/vipwithcode.html">VIP Lounge</a></p>
 									<h2>Get Involved</h2>
 									<p>Join like-minded individuals within the <a href="/community.html">Community</a> on Flipchat, Telegram and X. Learn about Kin and participate in promotions & live
-										events with Kin and Code Wallet together, creating shared experiences and growing together.</p>
+										events with Kin and Code Wallet, creating shared experiences together.</p>
 									</header>
 							</section>
 					</div>
