--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -156,7 +156,7 @@
 							<p class="align-center">ℹ️ <a href="https://x.com/i/broadcasts/1OdKrXNzEWqJX">This is a Demo Stream</a></p>
 							<p class="align-center">
 								<b>First time visiting?</b> Jump to the 
-								<a href="#about-contests">About Contests</a> 
+								<a href="#about-contests">About Live Events</a> 
 								section to learn more about how to participate.
 							</p>
 							<p class="align-center">All date and time formats are YYYY-MMM-DD and are in the <b>Pacific Time Zone (PST)</b>
@@ -246,8 +246,8 @@
 				
 				<section class="event headings">
 					<header class="major">
-						<h2 id="about-contests">About Contests</h2>
-						<p class="align-center">Click the link below to visit our <b>𝕏 Livestream Kin Contests</b> landing page, hosted by Hvr.</p>
+						<h2 id="about-contests">About Live Events</h2>
+						<p class="align-center">Click the link below to visit our <b>𝕏 Livestream Events</b> landing page, hosted by Hvr.</p>
 						<p class="align-center"><a href="https://www.ofidcrypt.ca/livestream-kin-contests-ugomxjp">Learn more</a></p>
 						<p class="align-center">You can see the beta documentation for the contest structure <a
 								href="https://github.com/OFiDCrypt/kin-perk-sweeps/blob/main/KIN%20Sweepstakes%20-%20Program%20Introduction%20%26%20Whitepaper%20v1.0.0.pdf">here</a>
