--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 								<tbody>
 									<tr>
 										<td>Get your Wallet<br />
-											<b>Via Partner App</b>
+											<b>A Partner App</b>
 										</td>
 										<td>Download<br />
 											<a href="https://getcode.com/#download-1">Code Wallet</a>
@@ -197,11 +197,11 @@
 										</td>
 									</tr>
 									<tr>
-										<td>Enter Contests<br />
+										<td>Join Live Events<br />
 											<b>Via Perk.Exchange</b>
 										</td>
 										<td>Learn<br />
-											<a href="/pages/livestream.html#about-contests">How to Enter</a>
+											<a href="/pages/livestream.html#about-contests">How to Participate</a>
 										</td>
 									</tr>
 								</tbody>
