--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		
         <!-- Partner Verification Meta Tags -->
 		<meta property="hvr-site-verification" content="1335145fefe220df614f86a7b0d3605d">
+		<meta name="facebook-domain-verification" content="yymxok0h5cimhztqf6dba15gzgdz7d" />
 	
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
