--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -207,10 +207,10 @@
 				<section class="event headings">
 					<header class="major">
 						<h2>Event Details</h2>
-						<p class="align-center">The highly anticipated Kin Sweepstakes, in collaboration with <a
+						<p class="align-center">The highly anticipated Kin & Code Wallet Live Events, in collaboration with <a
 								href="https://perk.exchange">Perk.Exchange</a> and
 							OFiDCrypt, marks the thrilling
-							debut of the Digital Art event series.</p>
+							debut of the 'Digital Art' series!</p>
 					</header>
 				</section>
 				
@@ -227,15 +227,15 @@
 										</header>
 										<a href="#" class="image fit"><img src="../assets/images/picgif01.gif"
 												alt="Featured Art Thumbnail" /></a>
-										<p> Launched in late September, the sweepstakes invite
-											participants to purchase
-											featured art for as little as $0.25 USD of Kin. To enter, simply visit the store by
-											clicking the button below, make your purchase,
-											and attend the upcoming 𝕏 Livestream where the winners will be chosen. The event
-											promises more entries, more
-											winners, and bigger cash prizes!</p>
+										<p>Launched in late September, the event invites participants to purchase
+featured digital art for as little as $0.25 USD of Kin. Simply visit the store by
+clicking the button below, make your purchase and receive a free entry for the live draw! 
+You can join the upcoming 𝕏 Livestream where the winners will be chosen. The event
+promises increased winners with more purchases, prizes in '$Kin Tips', minted NFTs, and charitable donations to 'Kin Liquidity Pools'.
+We focus on rewarding the art creators, winners, and donations in this order.</p>
+										
 										<ul class="actions special">
-											<li><a href="https://perk.exchange" class="button">Claim Entry</a></li>
+											<li><a href="https://perk.exchange" class="button">Preview Art</a></li>
 										</ul>
 									</article>
 								</section>
