--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -13,6 +13,22 @@
 
 			gtag('config', 'G-3KX9VK5CCH');
 		</script>
+
+		<!-- JSON -->
+		<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "Organization",
+		  "name": "OFiDCrypt",
+		  "url": "https://www.ofidcrypt.com",
+		  "logo": "https://www.ofidcrypt.com/assets/images/logo01.png",
+		  "sameAs": [
+		  "https://x.com/OFiDCrypt",
+		  "https://www.facebook.com/OFiDCrypt",
+		  "https://www.instagram.com/OFiDCrypt"
+		  ]
+		}
+		</script>
 		
 		<!-- Meta Description (for SEO) -->
 		<title>VIP Lounge with Code Wallet | OFiDCrypt</title>
