Text changes accross pages and document formatting.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
 								<p>To simplify your entry into the crypto world with a single, user-friendly wallet and payment app
 									dedicated to one cryptocurrency and its community. From there, explore additional opportunities through our growing
 									partnerships.</p>
-								<p>To jump straight in, we’ve provided quick links below. Otherwise, we recommend reviewing our <a href=“/index.html#Guide”>Full Guide & Walk-through</a> to learn about Kin, Code Wallet, and how they complement each other and fit into the future of our digital economy.</p>
+								<p><b>To jump straight in, we’ve provided quick links below</b>
+								<p>Otherwise, we recommend reviewing our <a href=“/index.html#Guide”>Full Guide & Walk-through</a> to learn about Kin, Code Wallet, and how they complement each other and fit into the future of our digital economy.</p>
 							</header>
 					
 							<!-- Quick Start & Guide -->
@@ -201,7 +202,7 @@
 										<td>Join Live Events<br />
 											<b>Via Perk.Exchange</b>
 										</td>
-										<td>Learn<br />
+										<td>Find Out<br />
 											<a href="/pages/livestream.html#about-contests">How to Participate</a>
 										</td>
 									</tr>
@@ -209,9 +210,10 @@
 							</table>
 							<header id="Guide">
 								<h2>Full Guide<br /> 
-									& Walk-through</h2>
+									& Walk-Through</h2>
 								<!-- Section Description -->
-								<p>Text here.</p>
+								<p>Coming Soon</p>
+								<p class="align-center">🚧 <b>Under Construction</b> 🚧</p>
 							</header>
 						</article>
 					</div>
