--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -16,20 +16,20 @@
 	</script>
 
 	<!-- JSON -->
-		<script type="application/ld+json">
-		{
-		  "@context": "https://schema.org",
-		  "@type": "Organization",
-		  "name": "OFiDCrypt",
-		  "url": "https://www.ofidcrypt.com",
-		  "logo": "https://www.ofidcrypt.com/assets/images/logo01.png",
-		  "sameAs": [
-		  "https://x.com/OFiDCrypt",
-		  "https://www.facebook.com/OFiDCrypt",
-		  "https://www.instagram.com/OFiDCrypt"
-		  ]
-		}
-		</script>
+	<script type="application/ld+json">
+	{
+	  "@context": "https://schema.org",
+	  "@type": "Organization",
+	  "name": "OFiDCrypt",
+	  "url": "https://www.ofidcrypt.com",
+	  "logo": "https://www.ofidcrypt.com/assets/images/logo01.png",
+	  "sameAs": [
+	  "https://x.com/OFiDCrypt",
+	  "https://www.facebook.com/OFiDCrypt",
+	  "https://www.instagram.com/OFiDCrypt"
+	  ]
+	}
+	</script>
 
 	<!-- Meta Description (for SEO) -->
 	<title>Livestream Crypto Contests | OFiDCrypt</title>
@@ -241,14 +241,13 @@
 											<h1><a href="#table-next-event">Perk<br />
 													Digital Art</a></h1>
 										</header>
-										<a href="#" class="image fit"><img src="../assets/images/picgif01.gif"
-												alt="Featured Art Thumbnail" /></a>
-										<p>Launched in late September, the event invites participants to purchase
-featured digital art for as little as $0.25 USD of Kin. Simply visit the store by
-clicking the button below, make your purchase and receive a free entry for the live draw! 
-You can join the upcoming 𝕏 Livestream where the winners will be chosen. The event
-promises increased winners with more purchases, prizes in '$Kin Tips', minted NFTs, and charitable donations to 'Kin Liquidity Pools'.
-We focus on rewarding the art creators, winners, and donations in this order.</p>
+										<a href="#" class="image fit"><img src="../assets/images/picgif01.gif" alt="Featured Art Thumbnail" /></a>
+										<p>Announced in late September, the event invites participants to purchase
+											featured digital art for as little as $0.25 USD of Kin. Simply visit the store by
+											clicking the button below, make your purchase and receive a free entry for the live draw!
+											You can join the upcoming 𝕏 Livestream where the winners will be chosen. The event
+											promises increased winners with more purchases, prizes in $Kin Tips, minted NFTs, and charitable donations to Kin
+											Liquidity Pools. We focus on rewarding the art creators, winners, and donations in this order.</p>
 										
 										<ul class="actions special">
 											<li><a href="https://perk.exchange" class="button">Preview Art</a></li>
