Remove an unnecessary space.

--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -241,7 +241,7 @@
 											<h1><a href="#table-next-event">Perk<br />
 													Digital Art</a></h1>
 										</header>
-										<a href="#" class="image fit"><img src="../assets/images/picgif01.gif" alt="Featured Art Thumbnail" /></a>
+										<a href="#" class="image fit"><img src="../assets/images/picgif01.gif" alt="Featured Art Thumbnail"></a>
 										<p>Announced in late September, the event invites participants to purchase
 											featured digital art for as little as $0.25 USD of Kin. Simply visit the store by
 											clicking the button below, make your purchase and receive a free entry for the live draw!
