Updated cover webp images.

--- a/pages/about.html
+++ b/pages/about.html
@@ -41,7 +41,7 @@
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:title" content="About OFiDCrypt | Making Crypto Easy">
 		<meta property="og:description" content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
-		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo02-lowres.png">
+		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta property="og:url" content="https://www.ofidcrypt.com/pages/about.html">
 		<meta property="og:type" content="website">
 		
@@ -49,7 +49,7 @@
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="About OFiDCrypt | Making Crypto Easy">
 		<meta name="twitter:description" content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
-		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo02-lowres.png">
+		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/about.html">
 		
 		<!-- Default ICO file with multiple sizes -->
@@ -134,7 +134,7 @@
 									<p>Our platform offers educational content and interactive events to get you started with ease. We continually seek partnerships to provide additional tools, helping you extend your opportunities at a steady pace.</p>
 								</header>
 								<div class="video main">
-									<video id="myVideo" width="100%" controls poster="../assets/images/bglogo02-lowres.png">
+									<video id="myVideo" width="100%" controls poster="../assets/images/bglogo01.webp">
 									  <source src="../assets/videos/vidlogo01.MP4" type="video/mp4">
 									</video>
 								  </div>
@@ -149,7 +149,7 @@
 										video.addEventListener('ended', function() {
 										  this.currentTime = 0; // Reset video to start
 										  this.pause(); // Pause the video
-										  this.poster = '../assets/images/bglogo02-lowres.png'; // Set the new poster image
+										  this.poster = '../assets/images/bglogo01.webp'; // Set the new poster image
 										});
 									  });
 									});
