--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -158,7 +158,7 @@
 							video.addEventListener('ended', function () {
 								this.currentTime = 0; // Reset video to start
 								this.pause(); // Pause the video
-								this.poster = '../assets/images/bglogo02-lowres.png'; // Set the new poster image
+								this.poster = '../assets/images/bglogo01.webp'; // Set the new poster image
 							});
 						});
 					});
