Added rounded corners 8px to some images, darkened button borders for dark mode, added consistent box shaddow effects to sections.

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 										<div class="quick-start-content">
 											<h3>Join Live Events</h3>
 											<p class="align-center">Via Perk.Exchange</p>
-											<li class="button"><a href="/pages/livestream.html#about-contests">Learn More</a></li>
+											<button class="button"><a href="/pages/livestream.html#about-contests">Learn More</a></button>
 										</div>
 							</section>
 					
