--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -32,16 +32,16 @@
 	</script>
 
 	<!-- Meta Description (for SEO) -->
-	<title>Livestream Crypto Contests | OFiDCrypt</title>
+	<title>Join Livestream Crypto Events | OFiDCrypt</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="description" content="Participate in OFiDCrypt live contests to win real assets! Our mission: Provide opportunities to get you crypto for your Code Wallet quickly and easily!">
-	<meta name="keywords" content="cryptocurrency, contests, giveaways, code wallet, vip, OFiDCrypt, crypto community, crypto, kin">
+	<meta name="description" content="Participate in OFiDCrypt live events to celebrate creators and engage in activities! Our mission: To introduce you to fun and interactive ways of using your wallet and crypto through earning tips, tipping others, or exploring features of more partner services.">
+	<meta name="keywords" content="cryptocurrency, live events, livestream, code wallet, OFiDCrypt, crypto community, crypto, games, activities, kin">
 	<meta name="author" content="Tokin ⬢">
 
 	<!-- Open Graph Meta Tags -->
 	<meta property="og:title" content="Livestream Crypto Contests | OFiDCrypt">
-	<meta property="og:description" content="Participate in OFiDCrypt live contests to win real assets! Our mission: Provide opportunities to get you crypto for your Code Wallet quickly and easily!">
+	<meta property="og:description" content="Participate in OFiDCrypt live events to celebrate creators and engage in activities! Our mission: To introduce you to fun and interactive ways of using your wallet and crypto through earning tips, tipping others, or exploring features of more partner services.">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-livestream-lowres.webp">
 	<meta property="og:url" content="https://www.ofidcrypt.com/pages/livestream.html">
 	<meta property="og:type" content="website">
@@ -49,7 +49,7 @@
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Livestream Crypto Contests | OFiDCrypt">
-	<meta name="twitter:description" content="Participate in OFiDCrypt live contests to win real assets! Our mission: Provide opportunities to get you crypto for your Code Wallet quickly and easily!">
+	<meta name="twitter:description" content="Participate in OFiDCrypt live events to celebrate creators and engage in activities! Our mission: To introduce you to fun and interactive ways of using your wallet and crypto through earning tips, tipping others, or exploring features of more partner services.">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-livestream-lowres.webp">
 	<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/livestream.html">
 
