Added cashlinks.html and link to page from vipwithcode.html.

--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -178,7 +178,7 @@
 							</header>
 
 							<div class="image button-image">
-								<a href="https://getcode.com" target="_blank">
+								<a href="../cashlinks.html" target="_blank">
 									<img src="../assets/images/pic10.png" alt="Login Button Image for Code Wallet" />
 								</a>
 							</div>
