Fixed some formatting and added js dark mode script to cashlinks.html.

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 									partnerships.</p>
 					
 								<p><b>To jump straight in, we’ve provided quick links below</b>
-								<p>Otherwise, we recommend reviewing our <a href=“/index.html#Guide”>Full Guide & Walk-Through</a> to learn
+								<p>Otherwise, we recommend reviewing our <a href="/index.html#Guide">Full Guide & Walk-Through</a> to learn
 									about Kin, Code Wallet, and how they complement each other and fit into the future of our digital
 									economy.</p>
 							</header>
