Hopefully fixed independant recaptcha for cashlinks.html.

--- a/cashlinks.html
+++ b/cashlinks.html
@@ -11,7 +11,7 @@
 			gtag('js', new Date());
 			gtag('config', 'G-3KX9VK5CCH');
 		</script>
-		
+
 		<!-- JSON -->
 		<script type="application/ld+json">
 		{
@@ -131,48 +131,59 @@
 					<header class="major">
 						<span class="date">VIP Member Area</span>
 			
-						<!-- Quick Start Section -->
-						<section class="quick-start-section">
-							<header>
-								<h2>Cash Links</h2>
-							</header>
-							<div class="quick-start-items">
-								<article class="quick-start-item"> <span class="image left"><img
-											src="/assets/images/cashlink-test.jpg" alt="Wallet Icon"></span>
-									<div class="quick-start-content">
-										<h3>⬢ 15,000</h3> <button class="button" onclick="return verifyRecaptcha();"><a
-												href="https://cash.getcode.com/c/#/e=YKmpEcZndtrJif4PGRbw87">Claim Kin</a></button>
-									</div>
-								</article>
-								<article class="quick-start-item"> <span class="image left"><img
-											src="/assets/images/cashlink-test.jpg" alt="Learn Icon"></span>
-									<div class="quick-start-content">
-										<h3>⬢ 15,000</h3> <button class="button" onclick="return verifyRecaptcha();"><a
-												href="https://cash.getcode.com/c/#/e=YKmpEcZndtrJif4PGRbw87">Claim Kin</a></button>
-									</div>
-								</article>
-								<article class="quick-start-item"> <span class="image left"><img
-											src="/assets/images/cashlink-test.jpg" alt="Event Icon"></span>
-									<div class="quick-start-content">
-										<h3>⬢ 15,000</h3> <button class="button" onclick="return verifyRecaptcha();"><a
-												href="https://cash.getcode.com/c/#/e=YKmpEcZndtrJif4PGRbw87">Claim Kin</a></button>
-									</div>
-								</article>
-							</div>
-							<div class="g-recaptcha" data-sitekey="6LeHSWsqAAAAABWNk60dgafwA26pWZiQoNi8ZUTa"></div>
-							<ul class="actions special">
-								<li><a href="/pages/vipwithcode.html"
-									class="button">Return to Lounge</a></li>
-							</ul>
-						</section>
-					</header>
-				</article>
+			<!-- Quick Start Section -->
+			<section class="quick-start-section">
+				<header>
+					<h2>Cash Links</h2>
+				</header>
+				<div class="quick-start-items">
+					<article class="quick-start-item">
+						<span class="image left"><img src="/assets/images/cashlink-test.jpg" alt="Wallet Icon"></span>
+						<div class="quick-start-content">
+							<h3>⬢ 15,000</h3>
+							<button class="button" onclick="return verifyRecaptchaForLinks();">
+								<a href="javascript:void(0);" onclick="event.preventDefault();">
+									Claim Kin
+								</a>
+							</button>
+						</div>
+					</article>
+					<article class="quick-start-item">
+						<span class="image left"><img src="/assets/images/cashlink-test.jpg" alt="Learn Icon"></span>
+						<div class="quick-start-content">
+							<h3>⬢ 15,000</h3>
+							<button class="button" onclick="return verifyRecaptchaForLinks();">
+								<a href="javascript:void(0);" onclick="event.preventDefault();">
+									Claim Kin
+								</a>
+							</button>
+						</div>
+					</article>
+					<article class="quick-start-item">
+						<span class="image left"><img src="/assets/images/cashlink-test.jpg" alt="Event Icon"></span>
+						<div class="quick-start-content">
+							<h3>⬢ 15,000</h3>
+							<button class="button" onclick="return verifyRecaptchaForLinks();">
+								<a href="javascript:void(0);" onclick="event.preventDefault();">
+									Claim Kin
+								</a>
+							</button>
+						</div>
+					</article>
+				</div>
+				<div id="recaptchaForLinks" class="g-recaptcha" data-sitekey="6LeHSWsqAAAAABWNk60dgafwA26pWZiQoNi8ZUTa"></div>
+				<ul class="actions special">
+					<li><a href="/pages/vipwithcode.html" class="button">Return to Lounge</a></li>
+				</ul>
+			</section>
+			</header>
+			</article>
 			</div>
 			
 			<!-- Footer -->
 			<footer id="footer">
 				<section>
-					<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
+					<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptchaForForm()">
 						<h2 class="centered-heading">Suggest A Topic</h2>
 						<div class="fields">
 							<div class="field">
@@ -188,9 +199,10 @@
 								<textarea name="message" id="message" rows="3" required></textarea>
 							</div>
 						</div>
-						<div class="g-recaptcha" data-sitekey="6LeHSWsqAAAAABWNk60dgafwA26pWZiQoNi8ZUTa"></div>
+						<div id="recaptchaForForm" class="g-recaptcha" data-sitekey="6LeHSWsqAAAAABWNk60dgafwA26pWZiQoNi8ZUTa">
+						</div>
 						<ul class="actions">
-							<li><input type="submit" value="Send Message"></li>
+							<li><input type="submit" value="Send Message" id="formSubmit" disabled></li>
 						</ul>
 					</form>
 				</section>
@@ -313,16 +325,34 @@
 			</script>
 			
 			<script>
-			// verifyRecaptcha
-				function verifyRecaptcha() {
+				// Function to handle link redirection after reCAPTCHA verification
+				function verifyRecaptchaForLinks() {
 					var response = grecaptcha.getResponse();
-					if (response.length == 0) {
-						alert("Please complete the reCAPTCHA.");
+					if (response.length === 0) {
+						alert("Please complete the reCAPTCHA for the links.");
+						return false;
+					} else {
+						// Redirect to the first link URL here
+						window.location.href = 'https://cash.getcode.com/c/#/e=YKmpEcZndtrJif4PGRbw87';
+						return true;
+					}
+				}
+
+				// Function to verify reCAPTCHA for form submission
+				function verifyRecaptchaForForm() {
+					var response = grecaptcha.getResponse();
+					if (response.length === 0) {
+						alert("Please complete the reCAPTCHA for the form.");
 						return false;
 					} else {
 						return true;
 					}
 				}
+
+				// Enable form submit button when reCAPTCHA is solved
+				document.querySelector('.g-recaptcha').addEventListener('grecaptcharesponse', function () {
+					document.getElementById('formSubmit').disabled = false;
+				});
 			</script>
 			
 			<!-- Link to non-critical JavaScript files -->
