Updated Contests link to Live Events.

--- a/community.html
+++ b/community.html
@@ -411,7 +411,7 @@
 			<ul>
 				<li><a href="/pages/affiliate.html">Affiliate</a></li>
 				<li><a href="/community.html">Community</a></li>
-				<li><a href="/pages/livestream.html">Contests</a></li>
+				<li><a href="/pages/livestream.html">Live Events</a></li>
 				<li><a href="/pages/about.html">About</a></li>
 			</ul>
 			<ul>
