--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
 				<!-- Copyright -->
 				<div id="copyright">
-					<ul><li><a href="/pages/affiliate.html">Affiliate</a></li><li><a href="/community.html">Community</a></li> <li><a href="/pages/livestream.html">Contests</a></li> <li><a href="/pages/about.html">About</a></li></ul>
+					<ul><li><a href="/pages/affiliate.html">Affiliate</a></li><li><a href="/community.html">Community</a></li> <li><a href="/pages/livestream.html">Live Events</a></li> <li><a href="/pages/about.html">About</a></li></ul>
 					<ul><li>&copy; OF<span class="i">i</span>DCrypt by Tokin ⬢ 2024</li></ul>
 					<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 				</div>
